# tss36

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: files.rs  mod.rs  search.rs  sync.rs  versions.rs  watcher.rs
src-tauri/src/db/: mod.rs  operations.rs  schema.rs
src-tauri/src/diff/: engine.rs  mod.rs
src-tauri/src/embedding/: mod.rs  onnx.rs
src-tauri/src/search/: mod.rs  semantic.rs
src-tauri/src/sync/: client.rs  mod.rs  protocol.rs  server.rs  version_graph.rs
src-tauri/src/watcher/: mod.rs  watcher.rs
src/api/: tauri.ts
src/components/: FileTree.vue  FileViewer.vue  SearchBar.vue  SyncPanel.vue  Timeline.vue
src/stores/: app.ts
src/styles/: global.scss
src/types/: index.ts
