[package]
name = "doc-version"
version = "0.1.0"
description = "文档版本管理与语义搜索系统"
authors = ["you@example.com"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
similar = "2.4"
walkdir = "2.4"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
path-slash = "0.1"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
